Fix language link alignment in footer

--- a/src/styles/components/_languageSelector.scss
+++ b/src/styles/components/_languageSelector.scss
@@ -1,7 +1,8 @@
 .locale-selector {
-
+    display: flex;
     font-size: 12px;
     margin-top: 10px;
+    align-items: center;
 
     .locale-flag {
         height: 15px !important;
